- MINOR version when adding functionality in a backwards compatible manner,
- PATCH version when making backwards compatible bug fixes.

== v2.2.0 (unreleased)

=== New features
* added a new parameter to create a DRG and attach it to VCN (fixes #16)
* added support for custom routing rules to provisioned route tables (fixes #17)
* added gateway custom display names: drg (related to issue #30)

=== Changes
* module examples
** added Terraform minimum version to 0.13 and OCI provider minimum version to 4.0.0
** changed module block of the main example to use variables from variables.tf instead of hardcoded values
** changed default label prefix to "terraform-oci"
** added outputs for cli feedback
** added a new example config for custom routing rules
* added oci provider minimum version to 4.0.0
* documentation update: coding conventions
* added `service_gateway_id` output

=== Fixes
* added CHANGELOG entry for v2.0.0 (fixes #19)

=== Deprecation notice

The folowwing variables will be renamed at the next major release of this module (related to issue #24):

* var.internet_gateway_enabled --> var.create_internet_gateway
* var.nat_gateway_enabled --> var.create_nat_gateway
* var.service_gateway_enabled --> var.create_service_gateway
* var.tags --> var.freeform_tags

== v2.1.0 (February, 03, 2021)

=== New features
* added a new parameter to lockdown the VCN Default Security List and option to revert to original state (fixes #22)

=== Changes
* update CONTRIBUTING guide
* fix typo on resource oci_core_internet_gateway.ig

== v2.0.1 (February 01,2021)

=== Changes
* changed input region to be optional (fixes #18)

== v2.0.0 (November 26,2020)

=== Changes
* added Terraform 0.13 compatibility
* changed Terraform minimum version to 0.13

== v1.0.3 (July 13,2020)

=== New features
* Added schema for Resource Manager ( #3)

=== Changes
* Made label_prefix is optional (#5)

== v1.0.2 (May 21,2020)

=== Changes
* Removed unnecessary variables (#2)